--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
                 <div class="navigation-list">
                     <ul>
-                        <li class="navigation-item "><a class="dark2" href="#">Features</a></li>
-                        <li class="navigation-item"><a class="dark2" href="#">About</a></li>
-                        <li class="navigation-item"><a class="dark2" href="#">Launch</a></li>
-                        <li class="navigation-signup"><a class="pink" href="#">Sign Up</a></li>
+                        <li class="navigation-item "><a  href="#">Features</a></li>
+                        <li class="navigation-item"><a href="#">About</a></li>
+                        <li class="navigation-item"><a href="#">Launch</a></li>
+                        <li class="navigation-signup"><a href="#">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="navigation-burger"><img src="./images/logo-pictures/burger.svg" alt=""></div>
@@ -32,11 +32,11 @@
             <div class="container">
                 <div class="hero-page-wrapper top">
                     <div class="left-side">
-                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
-                        <div class="page-title dark1">
+                        <div class="launch-date"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="page-title">
                             <h1 class="page-title-style-h1">An NFT like no other</h1>
                         </div>
-                        <div class="page-text dark2">
+                        <div class="page-text">
                             <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
                                 receive updates when we go
                                 live.</p>
@@ -54,7 +54,7 @@
         <section class="call-to-action-page ">
             <div class="container background-color-fill">
                 <div class="CTA-wrapper">
-                    <div class="section-title dark1"><span class="section-title-style">Free NFT for early birds</span>
+                    <div class="section-title"><span class="section-title-style">Free NFT for early birds</span>
                     </div>
                     <div class="section-text dark1">
                         <p class="section-text-style">Sign up today and you’ll get a free NFT when we launch</p>
@@ -149,7 +149,7 @@
                                 <div class="product-description-name">
                                     <div class="product-series orange product-series-padding"><span
                                             class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span
+                                    <div class="product-name product-series-padding"><span
                                             class="product-name-style ">Beige</span></div>
                                     <div class="product-number dark3 product-series-padding"><span
                                             class="product-number-style ">#12983</span></div>
@@ -157,7 +157,7 @@
                                 <div class="product-description-cost">
                                     <div class="product-bid dark3 product-series-padding"><span
                                             class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span
+                                    <div class="product-cost product-series-padding"><span
                                             class="product-cost-style ">2.99 ETH</span></div>
                                     <div class="product-timer dark3 product-series-padding"><span
                                             class="product-timer-style ">1 day left</span></div>
@@ -175,7 +175,7 @@
                                 <div class="product-description-name">
                                     <div class="product-series orange product-series-padding"><span
                                             class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span
+                                    <div class="product-name product-series-padding"><span
                                             class="product-name-style ">Red Man</span></div>
                                     <div class="product-number dark3 product-series-padding"><span
                                             class="product-number-style ">#12983</span></div>
@@ -183,7 +183,7 @@
                                 <div class="product-description-cost">
                                     <div class="product-bid dark3 product-series-padding"><span
                                             class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span
+                                    <div class="product-cost product-series-padding"><span
                                             class="product-cost-style ">2.99 ETH</span></div>
                                     <div class="product-timer dark3 product-series-padding"><span
                                             class="product-timer-style ">1 day left</span></div>
@@ -200,7 +200,7 @@
                                 <div class="product-description-name">
                                     <div class="product-series orange product-series-padding"><span
                                             class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span
+                                    <div class="product-name product-series-padding"><span
                                             class="product-name-style ">Green</span></div>
                                     <div class="product-number dark3 product-series-padding"><span
                                             class="product-number-style ">#12983</span></div>
@@ -208,7 +208,7 @@
                                 <div class="product-description-cost">
                                     <div class="product-bid dark3 product-series-padding"><span
                                             class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span
+                                    <div class="product-cost product-series-padding"><span
                                             class="product-cost-style ">2.99 ETH</span></div>
                                     <div class="product-timer dark3 product-series-padding"><span
                                             class="product-timer-style ">1 day left</span></div>
@@ -224,7 +224,7 @@
             <div class="container">
                 <div class="hero-page-wrapper top">
                     <div class="left-side">
-                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="launch-date"><span class="launch-date-style">LAUNCHING SOON</span></div>
                         <div class="page-title dark1">
                             <h1 class="page-title-style-h1">An NFT like no other</h1>
                         </div>
@@ -251,7 +251,7 @@
                 <div class="footer-title">
                     <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
                     <div class="footer-description"><span>Exclusive NFT Collection</span></div>
-                    <div class="footer-social-media dark4">
+                    <div class="footer-social-media">
                         <ul>
                             <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt="">
                             </li>
